src/app/app.component.css
.container {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  color: white;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
}

.ios-container {
  background-attachment: unset !important;
  background-size: cover !important;
}

.layout-header {
  position: fixed;
  width: 100%;
  z-index: 999;
  background: linear-gradient(#000, #00000061);
}

.layout-content {
  flex: 1 1 auto;
  overflow: auto;
  margin-top: 90px;
  margin-bottom: 45px;
  padding: 0 2rem;
}

.layout-footer {
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999;
  background: linear-gradient(#00000061, #000);
}

